--- a/css/common.scss
+++ b/css/common.scss
@@ -15,9 +15,11 @@ $color-navbar: #34495E;
 $color-smoothe: #5f5f5f;
 $color-fb: #3b5998;
 $color-github: #333333;
+$color-github-dark: #151515;
 $color-google: #dd4b39;
 $color-twitter: #55acee;
 $color-linkedIn: #0077b5;
+$color-smoothe-white: #cacaca;
 
 html, body{
   font-family: $font-lato !important;
