--- a/css/profile.css
+++ b/css/profile.css
@@ -741,7 +741,7 @@ hr {
   color: #dd4b39; }
 
 #github, #github:hover {
-  color: #333333; }
+  color: #151515; }
 
 #add, #add:hover {
   color: #00b488; }
@@ -758,9 +758,13 @@ hr {
     .page-content .top .content .left {
       float: left;
       text-align: center;
-      margin-bottom: 40px; }
+      margin-bottom: 40px;
+      background-color: #383838;
+      padding: 40px 20px; }
       .page-content .top .content .left .avatar-container {
-        display: inline-block; }
+        display: inline-block;
+        position: relative;
+        width: 80%; }
         .page-content .top .content .left .avatar-container #image-trigger {
           display: inline-block; }
         .page-content .top .content .left .avatar-container .profile-avatar {
@@ -771,9 +775,10 @@ hr {
         .page-content .top .content .left .avatar-container .edit-buttons {
           list-style: none;
           text-align: center;
-          position: relative;
-          bottom: 32px;
+          position: absolute;
+          bottom: 4px;
           margin: 0;
+          width: 100%;
           background: rgba(255, 255, 255, 0.7);
           padding: 5px; }
           .page-content .top .content .left .avatar-container .edit-buttons li {
@@ -785,7 +790,8 @@ hr {
               color: #747474; }
       .page-content .top .content .left .full-name {
         text-align: center;
-        font-size: 24px; }
+        font-size: 24px;
+        color: #cacaca !important; }
       .page-content .top .content .left .links {
         list-style: none;
         text-align: center;
@@ -794,6 +800,7 @@ hr {
           display: inline;
           margin-left: 10px; }
       .page-content .top .content .left .rating-container {
+        color: #cacaca;
         text-align: center; }
         .page-content .top .content .left .rating-container .rating-input {
           text-align: center;
@@ -805,7 +812,11 @@ hr {
     .page-content .top .content .mid .block {
       padding: 5px;
       border: solid 1px #cacaca;
-      margin-bottom: 30px; }
+      margin-bottom: 30px;
+      -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25) !important;
+      -moz-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25) !important;
+      box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25) !important;
+      background-color: white; }
       .page-content .top .content .mid .block h4 {
         margin-top: 0; }
       .page-content .top .content .mid .block .skills {
@@ -816,7 +827,11 @@ hr {
     .page-content .top .content .right .block {
       padding: 5px;
       border: solid 1px #cacaca;
-      margin-bottom: 20px; }
+      margin-bottom: 20px;
+      -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25) !important;
+      -moz-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25) !important;
+      box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25) !important;
+      background-color: white; }
       .page-content .top .content .right .block a {
         height: 100%;
         width: 100%;
@@ -864,9 +879,7 @@ hr {
         position: relative;
         max-width: 300px;
         background-color: white;
-        -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25) !important;
-        -moz-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25) !important;
-        box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25) !important; }
+        margin: 5px; }
         .page-content .top .showoff-section .block .projects li .portfolio-item .image-wrapper, .page-content .top .showoff-section .block .portfolio li .portfolio-item .image-wrapper {
           position: relative;
           display: inline-block;
@@ -923,7 +936,7 @@ hr {
   clear: both; }
 
 hr {
-  color: #cacaca; }
+  border: solid 1px #cacaca; }
 
 @media screen and (max-width: 767px) {
   .block {
