--- a/css/profile.scss
+++ b/css/profile.scss
@@ -15,7 +15,7 @@ $color-add: #00b488;
 }
 
 #github, #github:hover{
-  color: $color-github;
+  color: $color-github-dark;
 }
 
 #add, #add:hover{
@@ -37,8 +37,12 @@ $color-add: #00b488;
         float:left;
         text-align:center;
         margin-bottom: 40px;
+        background-color: #383838;
+        padding: 40px 20px;
         .avatar-container{
           display:inline-block;
+          position:relative;
+          width:80%;
           #image-trigger{
             display:inline-block;
           }
@@ -51,9 +55,10 @@ $color-add: #00b488;
           .edit-buttons{
             list-style: none;
             text-align:center;
-            position:relative;
-            bottom: 32px;
+            position:absolute;
+            bottom: 4px;
             margin:0;
+            width:100%;
             background: rgba(255, 255, 255, 0.7);
             padding: 5px;
             li{
@@ -72,6 +77,7 @@ $color-add: #00b488;
         .full-name{
           text-align:center;
           font-size:24px;
+          color: $color-smoothe-white !important;
         }
         .links{
           list-style:none;
@@ -83,6 +89,7 @@ $color-add: #00b488;
           }
         }
         .rating-container{
+          color: $color-smoothe-white;
           text-align:center;
           .rating-input{
             text-align:center;
@@ -102,6 +109,10 @@ $color-add: #00b488;
           padding:5px;
           border: solid 1px #cacaca;
           margin-bottom: 30px;
+          -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25) !important;
+          -moz-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25) !important;
+          box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25) !important;
+          background-color: white;
           h4{
             margin-top: 0;
           }
@@ -120,6 +131,10 @@ $color-add: #00b488;
           padding:5px;
           border: solid 1px #cacaca;
           margin-bottom: 20px;
+          -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25) !important;
+          -moz-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25) !important;
+          box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25) !important;
+          background-color: white;
           a{
             height: 100%;
             width: 100%;
@@ -186,9 +201,7 @@ $color-add: #00b488;
               position:relative;
               max-width:300px;
               background-color: white;
-              -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25) !important;
-              -moz-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25) !important;
-              box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25) !important;
+              margin:5px;
               .image-wrapper{
                 position:relative;
                 display:inline-block;
@@ -268,7 +281,7 @@ $color-add: #00b488;
 }
 
 hr{
-  color:#cacaca;
+  border: solid 1px #cacaca;
 }
 
 @media screen and (max-width: 767px) {
