--- a/css/common.css
+++ b/css/common.css
@@ -39,6 +39,16 @@ a:hover {
   position: relative;
   color: #5f5f5f; }
 
+.opacity-transistion {
+  opacity: .6;
+  transition: opacity .5s ease-out;
+  -moz-transition: opacity .5s ease-out;
+  -webkit-transition: opacity .5s ease-out;
+  -o-transition: opacity .5s ease-out; }
+
+.opacity-transistion:hover {
+  opacity: 1; }
+
 .underlined:after {
   display: block;
   position: absolute;
