--- a/css/profile.scss
+++ b/css/profile.scss
@@ -40,6 +40,9 @@ $color-add: #00b488;
         margin-bottom: 40px;
         background-color: #383838;
         padding: 40px 20px;
+        -webkit-box-shadow: inset 0px 0px 21px -6px rgba(0,0,0,1);
+        -moz-box-shadow: inset 0px 0px 21px -6px rgba(0,0,0,1);
+        box-shadow: inset 0px 0px 21px -4px rgba(0,0,0,1);
         .avatar-container{
           display:inline-block;
           position:relative;
@@ -97,11 +100,27 @@ $color-add: #00b488;
             display:inline-block;
             i{
               font-size: 24px;
-
             }
             i:hover{
               cursor: pointer;
             }
+          }
+        }
+        .notifications{
+          margin-top:50px;
+          display:inline-block;
+          .panel{
+            position:relative;
+          }
+        }
+
+        div.hidden-lg{
+          position:relative;
+          .counter{
+            color: white !important;
+            position:relative;
+            top:-20px;
+            right:-20px;
           }
         }
       }
@@ -114,6 +133,7 @@ $color-add: #00b488;
           -moz-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25) !important;
           box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25) !important;
           background-color: white;
+          position:relative;
           h4{
             margin-top: 0;
           }
@@ -170,6 +190,13 @@ $color-add: #00b488;
     }
     .showoff-section{
       .block{
+        -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25) !important;
+        -moz-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25) !important;
+        box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25) !important;
+        background-color: white;
+        padding: 20px 20px;
+        margin: 20px auto;
+        position:relative;
         h4{
 
         }
@@ -286,6 +313,20 @@ $color-add: #00b488;
 
 hr{
   border: solid 1px #cacaca;
+}
+
+.btn-close{
+  position:absolute;
+  padding:5px 10px;
+  right:0px;
+  top:0px;
+}
+
+.btn-edit{
+  position:absolute;
+  padding:5px 10px;
+  right:5px;
+  top:0px;
 }
 
 @media screen and (max-width: 767px) {
